--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,30 @@
 </head>
 <body>
 
+<form action="login_test" method="post">
+	<table>
+		<tr><td>name</td></tr><tr><td><input type="text" name="username"></td></tr>
+		<tr><td>password</td></tr><tr><td><input type="text" name="password"></td></tr>
+	</table>
+	<input type="submit" value="Submit" />
+</form>
+
+<a href="success">succes</a>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<script>
+// function registeredUser() {
+// 	$.ajax({
+// 	  url: "/api/getWeather",
+// 	  data: {
+// 	    zipcode: 97201
+// 	  },
+// 	  success: function( result ) {
+// 	    $( "#weather-temp" ).html( "<strong>" + result + "</strong> degrees" );
+// 	  }
+// 	});
+// }
+</script>
 </body>
 </html>
